[Legend: complete('+') | WIP('*') | missing('-')]

-------------------------
 OpenTK 0.9.9 -> 0.9.9-1
-------------------------
+ OpenTK
    + Enabled documentation generation in debug builds.
    + Compute
        + Bitfields are now mapped to 'long' instead of 'int'.
    + GLControl
        + Removed unused code.
    + Math
        + Namespace OpenTK.Math no longer exists. Math functions are now placed directly inside the OpenTK namespace.
        + Matrix4.Frustum was obsoleted in favor of Matrix4.CreatePerspectiveOffCenter.
        + Matrix4.Perspective was obsoleted in favor of Matrix4.CreatePerspectiveFieldOfView.

-------------------------
 OpenTK 0.9.8-1 -> 0.9.9
-------------------------
+ OpenTK
	+ Compute
		+ Initial support for the OpenCL flat API.
	+ Input
		+ Keyboard/Mouse/JoystickDevice are now marked as obsolete.
	+ GameWindow
		+ New properties: Bounds, Size, Location, ClientRectangle, ClientSize, Icon.
		+ Size should now contain the correct value inside the GameWindow constructor.
		+ The GameWindow should now start at the center of the specified DisplayDevice (Windows-only at the moment).
		+ GameWindow no longer relies on Windows.Forms.
	+ Graphics
		+ Glu is now marked as obsolete.
		+ Support for multisampled contexts (Windows-only at the moment).

-------------------------
 OpenTK 0.9.8 -> 0.9.8-1
-------------------------
+ Bind
	+ Fixed wrappers for methods ending in "nv" without being "NV" extensions (e.g. Booleanv).

+ OpenTK
	+ Graphics
		+ Fixed wrappers for methods ending in "nv" without being "NV" extensions (e.g. GetBooleanv).
	+ Math
		+ Improved performance for Matrix4/Matrix4d.Mult().

+ OpenTK.Utilities
	+ TextPrinter
		+ Fixed corruption after calling TextPrinter.Clear()

---------------------
OpenTK 0.9.7 -> 0.9.8
---------------------
+ Bind
	+ Merged 3.1 specs.
	+ Function overrides are now specified in 'gloverrides.xml' instead of gl.spec. Merging updated specs should now be much easier.